# ICET

./: CMakeLists.txt  README.md  TODO.txt  package.xml
include/: ThreadPool.h  ThreadPool.tpp  icet.h  utils.h
launch/: frames.gv  simple_mapping.launch
msg/: Num.msg
python/: ICET_demo.ipynb  ICET_spherical.py  utils.py
python/.ipynb_checkpoints/: ICET_demo-checkpoint.ipynb
python/point_clouds/: sample_pc_1.npy  sample_pc_2.npy
python/trained_networks/KITTINet100.kmod/: keras_metadata.pb
src/: ICET_demo.ipynb  ICET_spherical.py  ThreadPool.cpp  fake_lidar.py  icet.cpp  icetViz.cpp  icet_cpp_demo.cpp  mapmaker.py  odometry.cpp  scanMatcher.cpp  scan_matcher.py  simpleMapMaker.cpp  utils.cpp  utils.py
src/.ipynb_checkpoints/: ICET_demo-checkpoint.ipynb
src/sample_data/: frame_804.npy  frame_805.npy
src/trained_networks/KITTINet100.kmod/: saved_model.pb
src/trained_networks/KITTINet100.kmod/variables/: variables.index
